2004-11-27	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-shortcut-editor.c, po/: Better error message dialog
	  when Terminal failes to grab the keyboard for shortcut input.
	* terminal/terminal-preferences-dialog.c: Revert bottom-margin change
	  to the shortcuts page, because it looks odd with themes other than
	  the ones included with Xfce.

2004-11-26	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-tab-header.c: Update to the fixed ExoEllipsizedLabel
	  API.
	* docs/C/: Update version.
	* configure.ac, NEWS: Update version to 0.2.0pre1.

2004-11-25	Benedikt Meurer <benny@xfce.org>

	* docs/C/: Correct date.

2004-11-25	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-toolbars-view.c: Keep up with the changes to
	  ExoToolbarsView.
	* docs/: Updated documentation and added information about files
	  and environment variables.
	* Terminal.1: Fix several typos.
	* TODO: Update TODO list.

2004-11-24	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-options.c: Fix crash if an invalid option is
	  passed to Terminal.
	* terminal/Makefile.am: Don't include the stock icon pngs in the
	  final dist tarball, as all the information is already included
	  in the stock-icons.h file.
	* terminal/main.c: Prepend standard arguments instead of appending
	  them to avoid problems with -x/--execute.
	* doc/: Updated online documentation.
	* po/: Updated translations.

2004-11-24	Benedikt Meurer <benny@xfce.org>

	* terminal/stock-*48.png, terminal/stock-icons.h, terminal/main.c,
	  terminal/terminal-window.c, terminal/terminal-shortcut-editor.c,
	  terminal/terminal-preferences-dialog.c, icons/, pixmaps/, Makefile.am,
	  configure.ac: Use stock icons instead of loading the icons at runtime
	  to reduce startup time and avoid problems with improperly system
	  setups.

2004-11-23	Benedikt Meurer <benny@xfce.org>

	* NEWS: Collected all changes for the next release, that have been made
	  so far.

2004-11-23	Benedikt Meurer <benny@xfce.org>
