@@ -1,5 +1,10 @@
 2004-11-27	Benedikt Meurer <benny@xfce.org>
 
+	* terminal/terminal-preferences-dialog.c:  "Shortcut keys" is now
+	  above the "Menubar access" controls.
+
+2004-11-27	Benedikt Meurer <benny@xfce.org>
+
 	* terminal/terminal-shortcut-editor.c, po/: Better error message dialog
 	  when Terminal failes to grab the keyboard for shortcut input.
 	* terminal/terminal-preferences-dialog.c: Revert bottom-margin change
